[SSGSAG-329] Release 3.5.0 QA -  추천정보에서 스크랩 누르고, 메인으로 돌아오면 저장 안되어있음
추천 정보 상세에서 isSave 값은 서버에서 받아오도록

--- a/app/src/main/res/layout/activity_feed_web_detail.xml
+++ b/app/src/main/res/layout/activity_feed_web_detail.xml
@@ -4,8 +4,8 @@
 
     <data>
         <variable
-                name="activity"
-                type="com.icoo.ssgsag_android.ui.main.community.feed.FeedWebActivity"/>
+                name="vm"
+                type="com.icoo.ssgsag_android.ui.main.community.feed.FeedViewModel"/>
 
     </data>
 
@@ -45,7 +45,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="12dp" >
                 <ImageView
-                        isBookmarked="@{activity.isSave}"
+                        isBookmarked="@{vm.feed.isSave}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintStart_toStartOf="parent"
