--- a/app/src/main/res/layout/activity_community_board.xml
+++ b/app/src/main/res/layout/activity_community_board.xml
@@ -83,41 +83,50 @@
             app:layout_constraintTop_toBottomOf="@id/act_community_board_tl"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
-        <androidx.core.widget.NestedScrollView
+<!--        <androidx.core.widget.NestedScrollView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:fillViewport="true">-->
+<!--            <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:orientation="vertical">-->
+<!--                <ImageView-->
+<!--                        android:id="@+id/act_community_board_iv_top_banner"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="170dp"-->
+<!--                        app:layout_constraintTop_toTopOf="parent"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        android:background="@color/grey_4"-->
+<!--                        glideCenterCrop="@{vm.topBannerImage.photoUrl}"/>-->
+<!--                <com.icoo.ssgsag_android.util.view.CircleAnimIndicator-->
+<!--                        android:id="@+id/frag_all_poster_cai"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        app:layout_constraintEnd_toEndOf="parent"/>-->
+
+<!--                <androidx.viewpager.widget.ViewPager-->
+<!--                        android:id="@+id/act_community_board_vp"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="match_parent"-->
+<!--                        app:layout_constraintTop_toBottomOf="@id/act_community_board_iv_top_banner"-->
+<!--                        app:layout_constraintStart_toStartOf="parent"-->
+<!--                        app:layout_constraintBottom_toBottomOf="parent"/>-->
+<!--            </LinearLayout>-->
+
+<!--        </androidx.core.widget.NestedScrollView>-->
+
+
+        <androidx.viewpager.widget.ViewPager
+                android:id="@+id/act_community_board_vp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fillViewport="true">
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                <ImageView
-                        android:id="@+id/act_community_board_iv_top_banner"
-                        android:layout_width="match_parent"
-                        android:layout_height="170dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:background="@color/grey_4"
-                        glideCenterCrop="@{vm.topBannerImage.photoUrl}"/>
-                <com.icoo.ssgsag_android.util.view.CircleAnimIndicator
-                        android:id="@+id/frag_all_poster_cai"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"/>
-
-                <androidx.viewpager.widget.ViewPager
-                        android:id="@+id/act_community_board_vp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:layout_constraintTop_toBottomOf="@id/act_community_board_iv_top_banner"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
-            </LinearLayout>
-
-        </androidx.core.widget.NestedScrollView>
+                android:layout_height="match_parent"/>
     </RelativeLayout>
+
+
+
 
     <androidx.cardview.widget.CardView
             android:id="@+id/act_community_board_cv_write"
