[SSGSAG-338] Release 3.5.0 QA -  신고 버튼, 검색 버튼 삭제
n/a

--- a/app/src/main/res/layout/item_board_post_detail_reply.xml
+++ b/app/src/main/res/layout/item_board_post_detail_reply.xml
@@ -51,6 +51,7 @@
                         android:fontFamily="@font/noto_sans_kr_bold"
                         />
                 <ImageView
+                        ivVisibilityByBool="@{postComment.mine}"
                         android:id="@+id/item_board_post_detail_reply_iv_more"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
