--- a/app/src/main/res/layout/activity_board_post_detail.xml
+++ b/app/src/main/res/layout/activity_board_post_detail.xml
@@ -56,6 +56,7 @@
                 android:layout_height="match_parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                clVisibilityByBool="@{vm.postDetail.mine}"
                 android:layout_marginRight="12dp">
             <ImageView
                     android:layout_width="wrap_content"
