--- a/app/src/main/res/layout/activity_board_post_detail.xml
+++ b/app/src/main/res/layout/activity_board_post_detail.xml
@@ -69,13 +69,18 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.core.widget.NestedScrollView
-            android:id="@+id/act_board_post_Detail_nsv"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/act_board_post_detail_srl"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/act_board_post_detail_cl_toolbar"
             app:layout_constraintBottom_toTopOf="@+id/act_board_post_detail_cl_bottom_container"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+    <androidx.core.widget.NestedScrollView
+            android:id="@+id/act_board_post_Detail_nsv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@color/grey_4"
             android:overScrollMode="never">
         <LinearLayout
@@ -304,6 +309,7 @@
                     android:overScrollMode="never"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/act_board_post_detail_cl_bottom_container"
