--- a/app/src/main/res/layout/activity_board_post_detail.xml
+++ b/app/src/main/res/layout/activity_board_post_detail.xml
@@ -356,6 +356,11 @@
                 android:background="@color/white"
                 app:layout_constraintTop_toBottomOf="@+id/act_board_post_detail_ll_reply_guide"
                 app:layout_constraintBottom_toBottomOf="parent">
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/grey_4"
+                    app:layout_constraintTop_toTopOf="parent"/>
             <EditText
                     android:id="@+id/act_board_post_detail_et_comment"
                     android:layout_width="0dp"
