--- a/app/src/main/res/layout/activity_board_post_detail.xml
+++ b/app/src/main/res/layout/activity_board_post_detail.xml
@@ -197,6 +197,8 @@
                         android:fontFamily="@font/noto_sans_kr_regular"
                         android:layout_marginTop="16dp"
                         android:layout_marginBottom="16dp"
+                        android:linksClickable="true"
+                        android:autoLink="web"
                         tools:text="글 내용"
                         android:text="@{vm.postDetail.community.content}"
                         />
