[SSGSAG-338] Release 3.5.0 QA -  신고 버튼, 검색 버튼 삭제
n/a

--- a/app/src/main/res/layout/activity_community_board.xml
+++ b/app/src/main/res/layout/activity_community_board.xml
@@ -48,6 +48,7 @@
                 app:layout_constraintBottom_toBottomOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+                android:visibility="gone"
                 android:id="@+id/act_community_board_cl_search"
                 android:layout_width="48dp"
                 android:layout_height="match_parent"
