--- a/app/src/main/res/layout/item_board_post_detail_reply.xml
+++ b/app/src/main/res/layout/item_board_post_detail_reply.xml
@@ -15,7 +15,7 @@
     <LinearLayout
             android:id="@+id/item_board_post_detail_recomment_ll"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
