--- a/app/src/main/res/layout/activity_board_talk_post_write.xml
+++ b/app/src/main/res/layout/activity_board_talk_post_write.xml
@@ -37,7 +37,7 @@
                 android:layout_height="0dp"
                 app:layout_constraintTop_toBottomOf="@id/act_board_post_write_toolbar"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/act_board_post_write_cl_upload"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:fillViewport="true"
                 android:overScrollMode="never">
             <LinearLayout
@@ -80,6 +80,10 @@
                             android:textColor="@color/black_1"
                             android:letterSpacing="-0.01"
                             android:hint="글 제목(최대 20자)"
+                            android:maxLines="1"
+                            android:lines="1"
+                            android:inputType="text"
+                            android:maxLength="20"
                             android:textColorHint="@color/grey_2"
                             android:fontFamily="@font/noto_sans_kr_regular"/>
 
