--- a/app/src/main/res/layout/fragment_review_list_page.xml
+++ b/app/src/main/res/layout/fragment_review_list_page.xml
@@ -35,6 +35,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@+id/frag_review_list_page_v"
                     android:layout_marginLeft="24dp"
+                    app:cardCornerRadius="4dp"
                     >
                 <TextView
                         android:layout_width="wrap_content"
@@ -62,6 +63,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@+id/frag_review_list_page_v"
                     android:layout_marginLeft="8dp"
+                    app:cardCornerRadius="4dp"
                     >
                 <TextView
                         android:layout_width="wrap_content"
