--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,7 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="네이버 계정으로 로그인"
+                    android:text="네이버 계정으로 로그인 및 회원가입"
                     android:textColor="@color/white"
                     android:fontFamily="@font/noto_sans_kr_regular"
                     android:textSize="14sp"
@@ -76,7 +76,7 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="카카오 계정으로 로그인"
+                    android:text="카카오 계정으로 로그인 및 회원가입"
                     android:textColor="#3b1e1e"
                     android:fontFamily="@font/noto_sans_kr_regular"
                     android:textSize="14sp"
