--- a/app/src/main/res/layout/item_community_ssgsag_news.xml
+++ b/app/src/main/res/layout/item_community_ssgsag_news.xml
@@ -69,6 +69,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
         <ImageView
+                android:visibility="gone"
                 android:id="@+id/item_community_ssgsag_news_iv_bookmark"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
