--- a/app/src/main/res/layout/activity_board_post_detail.xml
+++ b/app/src/main/res/layout/activity_board_post_detail.xml
@@ -344,12 +344,21 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_weight="1"/>
-            <ImageView
+            <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/act_board_post_detail_iv_reply_guide_cancel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_cancel_white"
-                    android:layout_marginRight="22dp"/>
+                    android:layout_width="44dp"
+                    android:layout_height="44dp"
+                    android:layout_marginRight="8dp">
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_cancel_white"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </LinearLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/act_board_post_detail_cl_write_comment"
