--- a/app/src/main/res/layout/activity_photo_enlarge.xml
+++ b/app/src/main/res/layout/activity_photo_enlarge.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="#000"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -12,11 +12,14 @@
 
     <ImageView
             android:id="@+id/act_poster_enlarge_iv_exit"
-            android:layout_gravity="right"
-            android:padding="21dp"
-            android:src="@drawable/group_7"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="12dp"
+            android:layout_marginLeft="12dp"
+            android:padding="12dp"
+            android:src="@drawable/ic_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"/>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
