--- a/app/src/main/res/layout/activity_board_counsel_post_write.xml
+++ b/app/src/main/res/layout/activity_board_counsel_post_write.xml
@@ -5,6 +5,11 @@
         <variable
                 name="activity"
                 type="com.icoo.ssgsag_android.ui.main.community.board.postDetail.write.BoardCounselPostWriteActivity" />
+
+        <variable
+                name="vm"
+                type="com.icoo.ssgsag_android.ui.main.community.board.postDetail.write.BoardPostWriteViewModel" />
+
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -189,7 +194,8 @@
                 <ImageView
                         android:id="@+id/act_board_post_write_iv_photo"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent"
+                        glideCenterCrop="@{vm.photoUrl}"/>
                 <ImageView
                         android:id="@+id/act_board_post_write_iv_photo_delete"
                         android:layout_width="wrap_content"
@@ -200,6 +206,12 @@
                         android:layout_marginTop="4dp"
                         android:layout_marginRight="4dp"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <ProgressBar
+                    android:visibility="@{vm.isProgress()}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"/>
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
