--- a/app/src/main/res/layout/activity_board_talk_post_write.xml
+++ b/app/src/main/res/layout/activity_board_talk_post_write.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+                name="vm"
+                type="com.icoo.ssgsag_android.ui.main.community.board.postDetail.write.BoardPostWriteViewModel" />
+    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
@@ -154,7 +159,8 @@
                         <ImageView
                                 android:id="@+id/act_board_post_write_iv_photo"
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"/>
+                                android:layout_height="match_parent"
+                                glideCenterCrop="@{vm.photoUrl}"/>
                         <ImageView
                                 android:id="@+id/act_board_post_write_iv_photo_delete"
                                 android:layout_width="wrap_content"
@@ -165,6 +171,12 @@
                                 android:layout_marginTop="4dp"
                                 android:layout_marginRight="4dp"/>
                     </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <ProgressBar
+                            android:visibility="@{vm.isProgress()}"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"/>
                 </androidx.cardview.widget.CardView>
 
             </LinearLayout>
