--- a/app/src/main/res/layout/activity_board_counsel_post_write.xml
+++ b/app/src/main/res/layout/activity_board_counsel_post_write.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
@@ -12,7 +13,6 @@
 
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white">
@@ -126,7 +126,8 @@
                     android:maxLength="20"
                     android:inputType="text"
                     android:textColorHint="@color/grey_2"
-                    android:fontFamily="@font/noto_sans_kr_regular"/>
+                    android:fontFamily="@font/noto_sans_kr_regular"
+                    android:text="@{vm.postDetail.community.title}"/>
 
             <View
                     android:layout_width="match_parent"
@@ -155,6 +156,7 @@
                 android:textColorHint="@color/grey_2"
                 android:textColor="@color/black_1"
                 android:scrollbars="vertical"
+                android:text="@{vm.postDetail.community.content}"
                 />
         <androidx.cardview.widget.CardView
                 android:id="@+id/act_board_post_write_cv_upload_photo"
@@ -208,10 +210,10 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <ProgressBar
-                    android:visibility="@{vm.isProgress()}"
-                    android:layout_width="wrap_content"
+                    android:layout_width="58dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"/>
+                    android:layout_gravity="center"
+                    android:visibility="@{vm.isProgress()}" />
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
