--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -32,7 +32,7 @@
                     android:lineSpacingExtra="8sp"
                     android:text="@{vm.headerDate}"
                     android:textColor="@color/black_1"
-                    android:textSize="18dp"
+                    android:textSize="24dp"
                     tools:text="Day"
                     android:layout_marginLeft="22dp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -95,6 +95,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:visibility="gone"
+                tools:visibility="visible"
                 android:id="@+id/frag_calendar_cl_coachmark_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -103,10 +104,9 @@
                     android:id="@+id/frag_calendar_cl_coachmark"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="51dp"
-                    android:layout_marginBottom="13dp"
+                    android:layout_marginBottom="12dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent">
+                    app:layout_constraintStart_toStartOf="parent">
                 <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
