--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -21,7 +21,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/frag_community_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="64dp"
+            android:layout_height="@dimen/toolbar_height"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent">
         <TextView
