[SSGSAG-395] Release 3.5.0 QA - 커뮤니티 메인 뷰 pull to refresh
n/a

--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -7,6 +7,11 @@
         android:layout_height="match_parent"
         android:background="@color/white"
         android:paddingBottom="@dimen/main_navi_height">
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/frag_community_srl"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
     <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -263,8 +268,6 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:layout_marginBottom="22dp"/>
-
-
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -310,5 +313,6 @@
                     app:layout_constraintStart_toStartOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
