--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -222,6 +222,7 @@
             android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@id/frag_community_ll_btn">
         <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/frag_community_cl_feed_title"
                 android:layout_width="match_parent"
                 android:layout_height="52dp"
                 app:layout_constraintStart_toStartOf="parent"
