--- a/app/src/main/res/layout/item_community_collection.xml
+++ b/app/src/main/res/layout/item_community_collection.xml
@@ -9,6 +9,7 @@
             android:orientation="vertical"
             android:paddingTop="20dp">
         <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/item_community_collection_cl_title"
                 android:layout_width="match_parent"
                 android:layout_height="52dp"
                 app:layout_constraintStart_toStartOf="parent"
