[SSGSAG-398] Release 3.5.0 QA - 추천 정보 카테고리 바인딩
n/a

--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -44,6 +44,7 @@
                     android:textColor="@color/grey_1"
                     android:fontFamily="@font/noto_sans_kr_regular"
                     tools:text="카테고리"
+                    feedCategoryTitle="@{feed.categoryIdx}"
                     android:layout_marginTop="1dp"
                     />
 
