--- a/app/src/main/res/layout/item_community_ssgsag_news.xml
+++ b/app/src/main/res/layout/item_community_ssgsag_news.xml
@@ -55,6 +55,7 @@
                 android:textSize="12dp"
                 android:textColor="@color/grey_1"
                 android:fontFamily="@font/noto_sans_kr_regular"
+                feedCategoryTitle="@{feed.categoryIdx}"
                 android:text=" 카테고리" />
         <TextView
                 android:layout_width="wrap_content"
