--- a/app/src/main/res/layout/activity_community_feed.xml
+++ b/app/src/main/res/layout/activity_community_feed.xml
@@ -15,10 +15,15 @@
             android:id="@+id/act_community_feed_toolbar"
             layout="@layout/toolbar_back"/>
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/act_community_feed_srl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/act_community_feed_toolbar"
+            app:layout_constraintStart_toStartOf="parent">
     <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/act_community_feed_toolbar"
             app:layout_constraintBottom_toBottomOf="parent">
     <LinearLayout
             android:id="@+id/act_community_ll_popular_container"
@@ -85,6 +90,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
-
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
