--- a/app/src/main/res/layout/activity_board_counsel_post_write.xml
+++ b/app/src/main/res/layout/activity_board_counsel_post_write.xml
@@ -141,8 +141,7 @@
         <EditText
                 android:id="@+id/act_board_post_write_et_description"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:inputType="textMultiLine|textNoSuggestions"
                 android:layout_marginTop="12dp"
                 android:background="@drawable/border_eeeeee_4"
