[SSGSAG-413] Release 3.5.0 QA - 마이페이지 헤더 높이 조정
n/a

--- a/app/src/main/res/layout/fragment_my_board_page.xml
+++ b/app/src/main/res/layout/fragment_my_board_page.xml
@@ -39,12 +39,19 @@
                 />
     </LinearLayout>
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/frag_my_board_page_srl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent">
+
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/act_my_board_page_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
             android:overScrollMode="never"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
