--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -30,7 +30,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/toolbar_height">
+                        android:layout_height="64dp">
 
                     <TextView
                             android:layout_width="wrap_content"
